--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
 cycler==0.11.0
 Flask==2.0.2
 fmiopendata==0.3.4
 gunicorn==20.1.0
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
 joblib==1.1.0
@@ -15,9 +18,11 @@ Pillow==8.4.0
 pyparsing==3.0.4
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.1
 six==1.16.0
 sklearn==0.0
 threadpoolctl==3.0.0
+urllib3==1.26.7
 Werkzeug==2.0.2
